# Cards

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  train_model.py
templates/: index.html
