[project]
name = "cards"
version = "0.1.0"
description = "Playing card classification with PyTorch and a Flask web interface"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "Pillow>=9.5.0",
    "Flask>=2.3.0",
]

[project.scripts]
train = "train_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
